# aoc22

./: Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
inputs/: 2_rps_hot.txt
src/: day_1.rs  day_2.rs  day_21_1.rs  day_21_2.rs  day_21_3.rs  day_3.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  main.rs  utils.rs
