[package]
name = "aoc_22"
version = "0.1.0"
authors = ["Herbert"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[dependencies]
#clap = { version = "3.2.20", features = ["derive"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
